<resources>
    <string name="app_name">Calculator</string>
    <string name="title_text">Calculator</string>
    <string name="simple_text">Simple</string>
    <string name="advanced_text">Advanced</string>
    <string name="back_text">Back</string>
    <string name="hint_text"></string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="AC">AC</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="minus">-</string>
    <string name="times">x</string>
    <string name="divide">÷</string>
    <string name="plus_minus">-/+</string>
    <string name="exponent">^</string>
    <string name="history_text">History</string>
    <string name="history_string" />
    <string name="clear">Clear</string>
    <string name="factorial">!</string>
</resources>