<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SimpleScreen">

    <Button
        android:id="@+id/simple_back_button"
        android:layout_width="118dp"
        android:layout_height="57dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#000000"
        android:text="@string/back_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number_text"
        android:layout_width="361dp"
        android:layout_height="62dp"
        android:layout_marginTop="172dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:text="@string/hint_text"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#000000"
        android:text="@string/AC"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <Button
        android:id="@+id/one_button"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginTop="132dp"
        android:backgroundTint="#000000"
        android:text="@string/one"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <Button
        android:id="@+id/two_button"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginTop="132dp"
        android:backgroundTint="#000000"
        android:text="@string/two"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.316"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <Button
        android:id="@+id/three_button"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginTop="132dp"
        android:backgroundTint="#000000"
        android:text="@string/three"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <Button
        android:id="@+id/four_button"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginTop="208dp"
        android:backgroundTint="#000000"
        android:text="@string/four"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <Button
        android:id="@+id/five_button"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginTop="208dp"
        android:backgroundTint="#000000"
        android:text="@string/five"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.316"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <Button
        android:id="@+id/six_button"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginTop="208dp"
        android:backgroundTint="#000000"
        android:text="@string/six"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <Button
        android:id="@+id/seven_button"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginTop="284dp"
        android:backgroundTint="#000000"
        android:text="@string/seven"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <Button
        android:id="@+id/eight_button"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginTop="284dp"
        android:backgroundTint="#000000"
        android:text="@string/eight"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <Button
        android:id="@+id/nine_button"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginTop="284dp"
        android:backgroundTint="#000000"
        android:text="@string/nine"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <Button
        android:id="@+id/zero_button"
        android:layout_width="170dp"
        android:layout_height="71dp"
        android:layout_marginTop="360dp"
        android:backgroundTint="#000000"
        android:text="@string/zero"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <Button
        android:id="@+id/point_button"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginTop="360dp"
        android:backgroundTint="#000000"
        android:text="@string/point"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#000000"
        android:text="@string/plus"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginTop="132dp"
        android:backgroundTint="#000000"
        android:text="@string/minus"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginTop="208dp"
        android:backgroundTint="#000000"
        android:text="@string/times"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <Button
        android:id="@+id/divide_button"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginTop="284dp"
        android:backgroundTint="#000000"
        android:text="@string/divide"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <Button
        android:id="@+id/equals_button"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginTop="360dp"
        android:backgroundTint="#000000"
        android:text="@string/equals"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <Button
        android:id="@+id/plus_minus_button"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#000000"
        android:text="@string/plus_minus"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

</androidx.constraintlayout.widget.ConstraintLayout>