<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryScreen">

    <Button
        android:id="@+id/calc_screen_button"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#000000"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="101dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#000000"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/history_back_button"
        android:layout_width="112dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#000000"
        android:text="@string/back_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/history_scroll_view"
        android:layout_width="383dp"
        android:layout_height="662dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/history_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_string"
            android:textSize="34sp" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>