<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="403dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_text"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/simple_button"
        android:layout_width="360dp"
        android:layout_height="121dp"
        android:layout_marginTop="124dp"
        android:backgroundTint="#000000"
        android:text="@string/simple_text"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <Button
        android:id="@+id/advanced_button"
        android:layout_width="360dp"
        android:layout_height="121dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#000000"
        android:text="@string/advanced_text"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simple_button" />

</androidx.constraintlayout.widget.ConstraintLayout>